ecmascript/parser/tests/typescript-errors/tsc/async/es2017/asyncArrowFunction/asyncArrowFunction9_es2017/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/async/es2017/asyncArrowFunction/asyncArrowFunction9_es2017/input.ts:3:31
  |
3 | var foo = async (a = await => await): Promise<void> => {
  |                               ^^^^^

